examples/generic/invalid/03_malformed_origin.sdp
v=0
o=- 1000 1 IN IP7 192.168.1.1
s=Bad Address Type in Origin
t=0 0
